Finalize Mini RAG system: backend fixes, frontend UI, render deployment config

--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -42,7 +42,7 @@ async function ask() {
 
     result.innerHTML = "Loading...";
 
-    const res = await fetch("http://127.0.0.1:8000/ask", {
+    const res = await fetch("/ask", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ question: q })
@@ -63,6 +63,7 @@ async function ask() {
     result.innerHTML = html;
 }
 </script>
+
 
 </body>
 </html>
